app_controllers/infrastructure/kubernetes-deployments/ingress/traefik/06_us-west1-a-traefik-ingress.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-us-west1-a-ingress-controller
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: traefik.us-west1-a.securethebox.us
spec:
  rules:
    - host: traefik.us-west1-a.securethebox.us
      http:
        paths:
        - path: /
          backend:
            serviceName: traefik-us-west1-a-ingress-controller
            servicePort: admin
